# folder_compressor

./: Cargo.toml
src/: main.rs
